--- a/Example/docker/services/php/Dockerfile
+++ b/Example/docker/services/php/Dockerfile
@@ -18,25 +18,33 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     ca-certificates \
     procps  \
     libfontconfig  \
-    tini
+    tini \
+    software-properties-common
 
-# Install PHP extensions
-
-# Graphics Draw
-RUN apt-get update && apt-get install -y \
-    libfreetype6-dev \
-    libjpeg62-turbo-dev \
-    libpng-dev \
-    && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install -j$(nproc) gd
-
-# Multibyte String
-RUN apt-get update && apt-get install -y libonig-dev && docker-php-ext-install mbstring
-
-# Miscellaneous
-RUN docker-php-ext-install bcmath
-RUN docker-php-ext-install exif
-RUN docker-php-ext-install pdo_mysql
+ADD https://github.com/mlocati/docker-php-extension-installer/releases/latest/download/install-php-extensions /usr/local/bin/
+RUN chmod +x /usr/local/bin/install-php-extensions
+RUN install-php-extensions openssl
+RUN install-php-extensions PDO
+RUN install-php-extensions mbstring
+RUN install-php-extensions bcmath
+RUN install-php-extensions xml
+RUN install-php-extensions json
+RUN install-php-extensions pdo_mysql
+RUN install-php-extensions mysqli
+RUN install-php-extensions tokenizer
+RUN install-php-extensions ctype
+RUN install-php-extensions sqlite3
+RUN install-php-extensions soap
+RUN install-php-extensions mongodb
+#RUN install-php-extensions gd
+RUN install-php-extensions opcache
+RUN install-php-extensions redis
+RUN install-php-extensions sockets
+RUN install-php-extensions tidy
+RUN install-php-extensions zip
+RUN install-php-extensions yaml
+RUN install-php-extensions xsl
+RUN install-php-extensions xdebug
 
 # Install Composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
@@ -64,10 +72,3 @@ RUN apt-get -y autoremove \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && chown -R www-data:www-data /var/www/html
-
-# Install Cron
-#RUN apt-get update && apt-get install -y cron
-#RUN echo "* * * * * root php /var/www/artisan schedule:run >> /var/log/cron.log 2>&1" >> /etc/crontab
-#RUN touch /var/log/cron.log
-
-#CMD bash -c "cron && php-fpm"
